admission/ValidatingAdmissionPolicy/policies/network-adminnetworkpolicy/adminnetworkpolicies/deny.yaml
# RequiresCRD: adminnetworkpolicies.policy.networking.k8s.io
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: violating-adminnetworkpolicy-allow-all
  annotations:
    kubeapt.io/uuid: "4de9808c-4b75-4d6a-840a-24ba32e05e5c"
spec:
  priority: 10
  subject:
    namespaces: {}
  ingress:
  - action: Allow
    from:
    - namespaces: {}
